tests/baselines/reference/iteratorSpreadInArray8.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray8.ts(1,17): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray8.ts (1 errors) ====
    var array = [...new SymbolIterator];
                    ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    }